[package]
name = "semantic-analyzer"
version = "0.2.6"
authors = ["Evgeny Ukhanov <mrlsd@ya.ru>"]
description = "Semantic analyzer library for compilers written in Rust for semantic analysis of programming languages AST"
keywords = ["compiler", "semantic-analisis", "semantic-alalyzer", "compiler-design", "semantic"]
categories = ["compilers", "development-tools", "development-tools::build-utils"]
license = "MIT"
edition = "2021"
homepage = "https://github.com/mrLSD/semantic-analyzer-rs"
repository = "https://github.com/mrLSD/semantic-analyzer-rs"

[lib]
doctest = false

[dependencies]
nom_locate = "4.2"
